add page almost done

--- a/ProjektSemestralny/Add.xaml
+++ b/ProjektSemestralny/Add.xaml
@@ -8,7 +8,36 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Add">
 
-    <Grid Margin="10,10,10,10">
-        <Grid/>
+    <Grid Height="450" Margin="10,10,10,10" HorizontalAlignment="Stretch" OpacityMask="White" Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+        </Grid.RowDefinitions>
+        <Label Content="Dodaj samochód" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Center" RenderTransformOrigin="0.602,-1.948" FontSize="20" FontWeight="Bold" FontFamily="Caladea"/>
+        <TextBlock Grid.Row="1">
+            <Hyperlink NavigateUri="Add.xaml">Lista samochodów</Hyperlink>
+        </TextBlock>
+        <Label Content="Nazwa samochodu" HorizontalAlignment="Left" Margin="30,5,0,0" Grid.Row="2" VerticalAlignment="Top" RenderTransformOrigin="0.36,-1.153" VerticalContentAlignment="Center"/>
+        <TextBox x:Name="InputCarName" HorizontalAlignment="Left" Margin="166,9,0,0" Grid.Row="2" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Content="SIlnik" HorizontalAlignment="Left" Margin="30,4,0,0" Grid.Row="3" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+        <Label Content="Kolor" HorizontalAlignment="Left" Margin="30,0,0,0" Grid.Row="4" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Content="Stan" HorizontalAlignment="Left" Margin="30,4,0,0" Grid.Row="5" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+        <Label Content="Przebieg" HorizontalAlignment="Left" Margin="30,4,0,0" Grid.Row="6" VerticalAlignment="Top" RenderTransformOrigin="1.343,0.422"/>
+        <Label Content="Rok Produkcji" HorizontalAlignment="Left" Margin="30,0,0,0" Grid.Row="7" VerticalAlignment="Center"/>
+        <ComboBox HorizontalAlignment="Left" Name="SelectEngine" Margin="166,0,0,0" Grid.Row="3" VerticalAlignment="Center" Width="120" ItemsSource="{Binding}"/>
+        <ComboBox x:Name="SelectColor" HorizontalAlignment="Left" Margin="166,0,0,0" Grid.Row="4" VerticalAlignment="Center" Width="120" ItemsSource="{Binding}"/>
+        <ComboBox x:Name="SelectState" HorizontalAlignment="Left" Margin="166,0,0,0" Grid.Row="5" VerticalAlignment="Center" Width="120" ItemsSource="{Binding}"/>
+        <TextBox x:Name="InputMileage" HorizontalAlignment="Left" Margin="166,8,0,0" Grid.Row="6" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" PreviewTextInput="NumberValidationTextBox"/>
+        <TextBox x:Name="InputYear" HorizontalAlignment="Left" Margin="166,0,0,0" Grid.Row="7" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" PreviewTextInput="NumberValidationTextBox"/>
     </Grid>
 </Page>
