--- a/ProjektSemestralny/List.xaml
+++ b/ProjektSemestralny/List.xaml
@@ -13,11 +13,15 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Content="Przeglądaj samochody" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Center" RenderTransformOrigin="0.602,-1.948" FontSize="20" FontWeight="Bold" FontFamily="Caladea"/>
-        <DataGrid Grid.Row="1" Margin="0,0,0,0" Name="CarGrid" AutoGenerateColumns="False">
+        <TextBlock Grid.Row="1">
+            <Hyperlink NavigateUri="Add.xaml">Dodaj nowy samochod</Hyperlink>
+        </TextBlock>
+        <DataGrid Grid.Row="2" Margin="0,0,0,0" Name="CarGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" MaxHeight="297">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id"  Binding="{Binding Id}" Width="*"/>
                 <DataGridTextColumn Header="Nazwa Samochodu"  Binding="{Binding CarName}" Width="*"/>
