--- a/ProjektSemestralny/Add.xaml
+++ b/ProjektSemestralny/Add.xaml
@@ -25,7 +25,9 @@
         </Grid.RowDefinitions>
         <Label Content="Dodaj samochód" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Center" RenderTransformOrigin="0.602,-1.948" FontSize="20" FontWeight="Bold" FontFamily="Caladea"/>
         <TextBlock Grid.Row="1">
-            <Hyperlink NavigateUri="Add.xaml">Lista samochodów</Hyperlink>
+            <Hyperlink NavigateUri="List.xaml">Lista samochodów</Hyperlink>
+            <LineBreak/>
+            <Hyperlink NavigateUri="Edit.xaml">Edytuj Samochód</Hyperlink>
         </TextBlock>
         <Label Content="Nazwa samochodu" HorizontalAlignment="Left" Margin="30,5,0,0" Grid.Row="2" VerticalAlignment="Top" RenderTransformOrigin="0.36,-1.153" VerticalContentAlignment="Center"/>
         <TextBox x:Name="InputCarName" HorizontalAlignment="Left" Margin="166,9,0,0" Grid.Row="2" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
