--- a/ProjektSemestralny/List.xaml
+++ b/ProjektSemestralny/List.xaml
@@ -20,6 +20,8 @@
         <Label Content="Przeglądaj samochody" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Center" RenderTransformOrigin="0.602,-1.948" FontSize="20" FontWeight="Bold" FontFamily="Caladea"/>
         <TextBlock Grid.Row="1">
             <Hyperlink NavigateUri="Add.xaml">Dodaj nowy samochod</Hyperlink>
+            <LineBreak/>
+            <Hyperlink NavigateUri="Edit.xaml">Edytuj Samochód</Hyperlink>
         </TextBlock>
         <DataGrid Grid.Row="2" Margin="0,0,0,0" Name="CarGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" MaxHeight="297">
             <DataGrid.Columns>
