--- a/ProjektSemestralny/Edit.xaml
+++ b/ProjektSemestralny/Edit.xaml
@@ -23,6 +23,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <Label Content="Edytuj Samochód" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Center" RenderTransformOrigin="0.602,-1.948" FontSize="20" FontWeight="Bold" FontFamily="Caladea"/>
         <TextBlock Grid.Row="1">
@@ -44,5 +45,6 @@
         <TextBox x:Name="InputYear" HorizontalAlignment="Left" Margin="166,0,0,0" Grid.Row="8" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" PreviewTextInput="NumberValidationTextBox"/>
         <Label Content="Id" HorizontalAlignment="Left" Margin="30,0,0,0" Grid.Row="2" VerticalAlignment="Center"/>
         <ComboBox x:Name="SelectId" HorizontalAlignment="Left" Margin="166,0,0,0" Grid.Row="2" VerticalAlignment="Center" Width="120" RenderTransformOrigin="0.491,1.081" ItemsSource="{Binding}"/>
+        <Button x:Name="btnConfirm" Content="Zapisz" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="9" VerticalAlignment="Center"/>
     </Grid>
 </Page>
