--- a/ProjektSemestralny/Add.xaml
+++ b/ProjektSemestralny/Add.xaml
@@ -22,6 +22,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <Label Content="Dodaj samochód" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Center" RenderTransformOrigin="0.602,-1.948" FontSize="20" FontWeight="Bold" FontFamily="Caladea"/>
         <TextBlock Grid.Row="1">
@@ -41,5 +42,6 @@
         <ComboBox x:Name="SelectState" HorizontalAlignment="Left" Margin="166,0,0,0" Grid.Row="5" VerticalAlignment="Center" Width="120" ItemsSource="{Binding}"/>
         <TextBox x:Name="InputMileage" HorizontalAlignment="Left" Margin="166,8,0,0" Grid.Row="6" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" PreviewTextInput="NumberValidationTextBox"/>
         <TextBox x:Name="InputYear" HorizontalAlignment="Left" Margin="166,0,0,0" Grid.Row="7" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" PreviewTextInput="NumberValidationTextBox"/>
+        <Button x:Name="btnConfirm" Content="Dodaj" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="8" VerticalAlignment="Center" RenderTransformOrigin="-0.757,0.401" HorizontalContentAlignment="Center"/>
     </Grid>
 </Page>
